--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,21 +7,20 @@ android {
     defaultConfig {
         applicationId "com.easy.tgPlus"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 29
         versionCode 10003
         versionName "1.0.3"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-	//编译器不支持 provided
-	compile files('libs/XposedBridgeAPI-89.jar')
+	compileOnly files('libs/XposedBridgeAPI-89.jar')
     //implementation fileTree(dir: "libs", include: ["*.jar"])
 }
